# c-compiler

./: .gitignore  CMakeLists.txt  main.cxx  test.sh
boolean_evaluator/: boolean_evaluator.cxx  boolean_evaluator.hxx
boolean_evaluator/qa/: CMakeLists.txt  test_boolean_evaluator.cxx
boolean_evaluator/qa/data/: basic.txt  complex.txt
common/: error.hxx  global.hxx  log.hxx  state.hxx  str_hash.hxx  strings.hxx  symbol_table.hxx  test_base.cxx  test_base.hxx  uncopyable.hxx  variables.hxx
common/qa/: defines.hxx  test_base.cxx  test_base.hxx  test_runner.cxx
dispatcher/: command.hxx  command_type.def  command_type.hxx  dispatcher.cxx  dispatcher.hxx  dispatcher_action.hxx
lexer/: lexer.cxx  lexer.hxx
lexer/qa/: CMakeLists.txt  test_lexer.cxx
lexer/qa/data/: simple.c
lexer/qa/data/compare/expected/: simple.c  simple.json
lexer/qa/data/compare/src/: cast.c  many_operators.c  simple.c
misc/: scope_guard.hxx
parser/: ast_nodes.def  parser.cxx  parser.hxx  parser_defines.hxx  parser_node.hxx  parser_nodes.def
parser/qa/: test_parser_grammar.cxx
preprocessor/: preprocessor.cxx  preprocessor.hxx  preprocessor_error.hxx  standard_paths.txt
preprocessor/qa/: CMakeLists.txt  test_preprocessor.cxx
preprocessor/qa/data/: include.c  include1.c  relative_include.c  undef.c
preprocessor/qa/data/compare/expected/: macro_expansion.c  macro_function.c  macro_function2.c
preprocessor/qa/data/compare/src/: backslash_line.c  macro_expansion.c  macro_function.c  macro_function2.c
preprocessor/qa/data/conditional_compilation/: if.c  ifdef.c  include.c  relative_include.c
preprocessor/qa/data/include/: recursive_include1.h  recursive_include2.h  relative_include.h  simple_include.h  three_lines.h
preprocessor/qa/data/include/include2/: relative_file.h
preprocessor/qa/data/must_error/: error_directive.c  file_not_found.c  recursive_include.c
preprocessor/qa/data/predefined_macros/: date.c  line.c  time.c
token/: token.hxx  tokens.def
verifier/: CMakeLists.txt  main.c  verifier.l  verifier.y
